test/expected/explain_rtpi-c++-error.out
explain int *restrict p
             ^
14: error: "restrict" not supported in C++; use "__restrict" instead
